# cli-hub

./: CLAUDE.md
.claude/skills/: generate-cli.md
.github/workflows/: build-tauri.yml  build.yml
cli-hub/: .gitignore  Taskfile.yml  build_config.go  build_config_devtools.go  cmd_unix.go  cmd_windows.go  executor.go  go.mod  go.sum  logger.go  main.go  server.go  settings.go  tool.go  tool_flow_check.go
cli-hub-tauri/: .gitignore  AUDIT-REPORT.md  FINAL-AUDIT-REPORT.md  REVIEW.md  index.html  package-lock.json  package.json  vite.config.ts
cli-hub-tauri/.github/workflows/: build-tauri.yml
cli-hub-tauri/src/: App.tsx  api.ts  index.css  logger.ts  main.tsx  types.ts
cli-hub-tauri/src-tauri/: Cargo.toml  tauri.conf.json
cli-hub-tauri/src-tauri/capabilities/: default.json
cli-hub-tauri/src-tauri/icons/: icon.icns
cli-hub-tauri/src-tauri/src/: executor.rs  lib.rs  main.rs  settings.rs
cli-hub-tauri/src-tauri/src/commands/: mod.rs  settings.rs  tools.rs
cli-hub-tauri/src-tauri/src/log/: mod.rs
cli-hub-tauri/src/components/: Console.tsx  DynamicForm.tsx  FilePathInput.tsx  HelpTooltip.tsx  MainPanel.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx
cli-hub-tauri/src/hooks/: useResizable.ts
cli-hub-tauri/src/i18n/: index.ts  useLocalizedSchema.ts
cli-hub/.github/workflows/: build.yml
cli-hub/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cli-hub/frontend/.playwright/: cli.config.json
cli-hub/tools/: xlsx-merge
tools/xlsx-extract/: gen_testdata.go  go.mod  main.go  test-data.xlsx  test-input.xlsx  test.sh
(+79 files in other folders)
