[package]
name = "cli-hub-tauri"
version = "0.1.0"
description = "A desktop CLI tool hub"
authors = ["LuSrackhall"]
edition = "2021"

[lib]
name = "cli_hub_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
